@@ -1,4 +1,10 @@
 * wc3lib-0.1
+      2011-10-06; Tamino Dauth <tamino@cdauth.eu> +metadata.xml:
+      Added English useflag descriptions.
+
+      2011-10-06; Tamino Dauth <tamino@cdauth.eu> +wc3lib-0.1.ebuild:
+      Added Crypto++ dependency.
+
       2011-09-19; Tamino Dauth <tamino@cdauth.eu> +wc3lib-0.1.ebuild:
       Initial support for useflags app, blp, map, mdlx, mpq, w3g and plugins.
 
